tests/ui/source-enum-not-error.stderr
error[E0599]: no method named `as_dyn_error` found for reference `&String` in the current scope
   --> $DIR/source-enum-not-error.rs:7:9
    |
7   |           source: String,
    |           ^^^^^^ method not found in `&String`
    |
    = note: the method `as_dyn_error` exists but the following trait bounds were not satisfied:
            `String: std::error::Error`
            which is required by `String: AsDynError`
            `&String: std::error::Error`
            which is required by `&String: AsDynError`
            `str: Sized`
            which is required by `str: AsDynError`
            `str: std::error::Error`
            which is required by `str: AsDynError`
